--- a/sdtp/sdtp.csproj
+++ b/sdtp/sdtp.csproj
@@ -104,6 +104,7 @@
     <Content Include="assets\js\owl-carousel.js" />
     <Content Include="HomePage.aspx" />
     <Content Include="Login.aspx" />
+    <Content Include="Registerpage.aspx" />
     <Content Include="vendor\bootstrap\css\bootstrap.min.css" />
     <Content Include="vendor\bootstrap\js\bootstrap.min.js" />
     <Content Include="vendor\jquery\jquery.js" />
@@ -129,6 +130,13 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Registerpage.aspx.cs">
+      <DependentUpon>Registerpage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Registerpage.aspx.designer.cs">
+      <DependentUpon>Registerpage.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Site1.Master.cs">
       <DependentUpon>Site1.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
