--- a/sdtp/Web.config
+++ b/sdtp/Web.config
@@ -8,6 +8,14 @@
 		<add name="con" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"  />
 	</connectionStrings>
 	
+	
+	<appSettings>
+		<!--  Google Maps API key as an environment variable on  server -->
+		<add key="AIzaSyDVVeeu4j4og9PpzIRuiSFcW8PwWK7aJwc" value="api-key" />
+	</appSettings>
+	
+	
+	
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -18,4 +26,30 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+
+
+
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+					<match url="(.*)" />
+					<conditions>
+						<add input="{HTTPS}" pattern="off" />
+					</conditions>
+					<action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
+				</rule>
+			</rules>
+		</rewrite>
+
+		<httpProtocol>
+			<customHeaders>
+				<!-- Add your security headers here -->
+				<add name="Content-Security-Policy" value="your-policy" />
+				<add name="X-Content-Type-Options" value="nosniff" />
+			</customHeaders>
+		</httpProtocol>
+	</system.webServer>
+
 </configuration>
