--- a/sdtp/sdtp.csproj
+++ b/sdtp/sdtp.csproj
@@ -171,6 +171,7 @@
     <Content Include="landlord.aspx" />
     <Content Include="Login.aspx" />
     <Content Include="Registerpage.aspx" />
+    <Content Include="studentPage.aspx" />
     <Content Include="vendor\bootstrap\css\bootstrap.min.css" />
     <Content Include="vendor\bootstrap\js\bootstrap.min.js" />
     <Content Include="vendor\jquery\jquery.js" />
@@ -224,6 +225,13 @@
     </Compile>
     <Compile Include="Site1.Master.designer.cs">
       <DependentUpon>Site1.Master</DependentUpon>
+    </Compile>
+    <Compile Include="studentPage.aspx.cs">
+      <DependentUpon>studentPage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="studentPage.aspx.designer.cs">
+      <DependentUpon>studentPage.aspx</DependentUpon>
     </Compile>
     <Compile Include="WardenPage.aspx.cs">
       <DependentUpon>WardenPage.aspx</DependentUpon>
