added student feed back and website visitor backend

--- a/sdtp/Web.config
+++ b/sdtp/Web.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
@@ -6,16 +6,16 @@
 <configuration>
   <connectionStrings>
     <add name="con" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;" />
-    <add name="nsbmSdtpDBConnectionString" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Persist Security Info=True;User ID=sa;Password=123789;" providerName="System.Data.SqlClient" />
-    <!--landlors Page orginal start-->
-    <add name="landlordPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--Warden Page orginal end-->
-    <!--Warden Page orginal start-->
-    <add name="nsbmSdtpDBConnectionWardenPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--Warden Page orginal end-->
-    <!--Warden Page Showing Grid-->
-    <add name="landLordPageTableForWardenPageAccess" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;" providerName="System.Data.SqlClient" />
-    <!--Warden Page Showing Grid end-->
+    <add name="nsbmSdtpDBConnectionString" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Persist Security Info=True;User ID=sa;Password=123789;"
+      providerName="System.Data.SqlClient" />
+    <add name="landlordPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="nsbmSdtpDBConnectionWardenPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="landLordPageTableForWardenPageAccess" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
+    <add name="nsbmSdtpDBConnectionString2" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <!--  Google Maps API key as an environment variable on  server -->
@@ -45,7 +45,7 @@
     </rewrite>
     <httpProtocol>
       <customHeaders>
-        <!-- Add your security headers here -->
+        <!-- Add security headers  -->
         <add name="Content-Security-Policy" value="your-policy" />
         <add name="X-Content-Type-Options" value="nosniff" />
       </customHeaders>
