--- a/sdtp/bin/sdtp.dll.config
+++ b/sdtp/bin/sdtp.dll.config
@@ -18,7 +18,6 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <!--  Google Maps API key as an environment variable on  server -->
     <add key="AIzaSyDVVeeu4j4og9PpzIRuiSFcW8PwWK7aJwc" value="api-key" />
   </appSettings>
   <system.web>
@@ -45,7 +44,7 @@
     </rewrite>
     <httpProtocol>
       <customHeaders>
-        <!-- Add security headers  -->
+        <!-- security headers  -->
         <add name="Content-Security-Policy" value="your-policy" />
         <add name="X-Content-Type-Options" value="nosniff" />
       </customHeaders>
