--- a/sdtp/Web.config
+++ b/sdtp/Web.config
@@ -8,7 +8,7 @@
     <add name="con" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;" />
     <add name="nsbmSdtpDBConnectionString" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Persist Security Info=True;User ID=sa;Password=123789;"
       providerName="System.Data.SqlClient" />
-    <add name="landlordPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
+    <add name="landlordPage" connectionString="Data Source=yourpc_name;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
       providerName="System.Data.SqlClient" />
     <add name="nsbmSdtpDBConnectionWardenPage" connectionString="Data Source=DESKTOP-PAO1EML;Initial Catalog=nsbmSdtpDB;Integrated Security=True;"
       providerName="System.Data.SqlClient" />
@@ -18,7 +18,7 @@
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
-    <add key="AIzaSyDVVeeu4j4og9PpzIRuiSFcW8PwWK7aJwc" value="api-key" />
+    <add key="your_google_map_api_key" value="api-key" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
